fixed z-index of search button

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -37,6 +37,7 @@
   background: #f6f6f6;
   border: 3px solid #ffbf47;
   border-top-width: 0;
+  z-index:4000;
 }
 #results ul {
   margin: 0;
